# remote-runnerd

./: CMakeLists.txt  README.md  readme
src/: main.cpp  runnerdManager.cpp  runnerdManager.h  runnerdWorker.cpp  runnerdWorker.h
